--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"> 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React IT Logger</title>
+    <title>Team Tasks</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
